@@ -41,6 +41,7 @@ void avfilter_register_all(void)
     REGISTER_FILTER (ANULLSINK,   anullsink,   asink);
 
     REGISTER_FILTER (ASPECT,      aspect,      vf);
+    REGISTER_FILTER (BLACKFRAME,  blackframe,  vf);
     REGISTER_FILTER (CROP,        crop,        vf);
     REGISTER_FILTER (FIFO,        fifo,        vf);
     REGISTER_FILTER (FORMAT,      format,      vf);
